--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "expo": "^30.0.1",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-navigation": "^2.17.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.2.0",
@@ -44,6 +45,7 @@
     "@types/react": "^16.4.16",
     "@types/react-dom": "^16.0.8",
     "@types/react-native": "^0.57.2",
+    "@types/react-navigation": "^2.0.24",
     "@types/react-test-renderer": "^16.0.3",
     "concurrently": "^4.0.1",
     "husky": "^1.1.1",
