--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^8.0.0",
-    "expo": "^30.0.1",
+    "expo": "^30.0.0",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-navigation": "^2.17.0"
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@commitlint/cli": "^7.2.0",
     "@commitlint/config-conventional": "^7.1.2",
+    "@types/color": "^3.0.0",
     "@types/expo__vector-icons": "^6.2.3",
     "@types/jest": "^23.3.3",
     "@types/react": "^16.4.16",
@@ -49,6 +50,7 @@
     "@types/react-native": "^0.57.2",
     "@types/react-navigation": "^2.0.24",
     "@types/react-test-renderer": "^16.0.3",
+    "color": "^3.1.0",
     "concurrently": "^4.0.1",
     "husky": "^1.1.1",
     "prettier": "^1.14.3",
